feat: add wordlist

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kbbi_harvester",
   "version": "1.0.0",
-  "description": "A batch harvester for KBBI entries—fetches words from a list, looks them up via @doedja/kbbi-js, and saves the results as JSON files.",
+  "description": "A batch harvester for KBBI entries—fetches 112595 words from a list, looks them up via @doedja/kbbi-js, and saves the results as JSON files.",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -13,6 +13,7 @@
   "author": "Listiananda Apriliawan",
   "license": "ISC",
   "dependencies": {
-    "@doedja/kbbi-js": "^1.0.3"
+    "@doedja/kbbi-js": "^1.0.3",
+    "axios": "^1.10.0"
   }
 }
