add editor.wordWrap setting to VSCode configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#33333399",
     "titleBar.inactiveForeground": "#d4d4d499"
   },
-  "peacock.color": "#333333"
+  "peacock.color": "#333333",
+  "editor.wordWrap": "on"
 }
